--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "sass": "^1.39.0",
+    "sass-loader": "^12.1.0"
   }
 }
